<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_post_bottom_sheet_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/create_post_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/bottom_sheet_title"
        android:textAppearance="@style/AppTheme.TextTitleBottomSheet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/create_post_arrow_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_default"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/comment_layout"
        style="@style/AppTheme.EditTextLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_default"
        android:layout_marginBottom="@dimen/gutter_default"
        app:layout_constraintBottom_toTopOf="@+id/attachments_recycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_post_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/comment_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_comment"
            android:padding="@dimen/margin_default" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/attachments_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/gutter_default"
        app:layout_constraintBottom_toTopOf="@+id/options_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_attachment"
        tools:orientation="horizontal" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/options_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_default"
        android:layout_marginBottom="@dimen/gutter_default"
        app:layout_constraintBottom_toTopOf="@+id/attach_file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/option_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_public_post"
            app:chipIcon="@drawable/ic_person"
            app:closeIcon="@drawable/ic_expand_more"
            app:closeIconVisible="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/comment_layout" />

        <com.google.android.material.chip.Chip
            android:id="@+id/delay_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_now"
            app:chipIcon="@drawable/ic_time"
            app:closeIcon="@drawable/ic_expand_more"
            app:closeIconVisible="true"
            app:layout_constraintStart_toEndOf="@+id/option_chip"
            app:layout_constraintTop_toBottomOf="@+id/comment_layout" />

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/attach_file"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginBottom="@dimen/gutter_default"
        android:padding="4dp"
        android:src="@drawable/ic_attach"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout2"
        app:layout_constraintEnd_toEndOf="@+id/comment_layout" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/at_source"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:padding="4dp"
        android:src="@drawable/ic_at"
        app:layout_constraintBottom_toBottomOf="@+id/attach_file"
        app:layout_constraintEnd_toStartOf="@+id/attach_file"
        app:layout_constraintTop_toTopOf="@+id/attach_file" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/post_settings"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:padding="4dp"
        android:src="@drawable/ic_settings"
        app:layout_constraintBottom_toBottomOf="@+id/attach_file"
        app:layout_constraintEnd_toStartOf="@+id/at_source"
        app:layout_constraintTop_toTopOf="@+id/at_source" />

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimaryBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_share"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/gutter_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_marginBottom="@dimen/gutter_default"
            android:text="@string/share_btn_text" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>